Simplified the footer HTML and moved the styles from ui.R to styles.css. Fixed low contrast error on Leaflet map disabled style but had to use !important as the text colour appears to have been added now via a style attribute.

--- a/www/styles.css
+++ b/www/styles.css
@@ -41,6 +41,19 @@ tr:last-child
   font-weight: bold;
 }
 
+footer
+{
+  position:fixed;
+  text-align:center;
+  left: 0; bottom:0;
+  width:100%;
+  z-index:1000;
+  height:30px;
+  padding: 5px 20px;
+  background-color: #f5f9ff;
+}
+
+
 button:active {
   box-shadow: none !important;
 }
@@ -59,6 +72,17 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+/* for the content of the zoom control */
+.leaflet-bar a
+{
+    color: #000;
+}
+
+.leaflet-bar a.leaflet-disabled
+{
+    color: #757575 !important;
 }
 
 /* increase box padding */
